; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/mips/fw/cfe/extr_cfe_api.c_cfe_flushcache.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/mips/fw/cfe/extr_cfe_api.c_cfe_flushcache.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.cfe_xiocb = type { i32, i32, i64, i64, i32 }

@CFE_CMD_FW_FLUSHCACHE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @cfe_flushcache(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.cfe_xiocb, align 8
  store i32 %0, i32* %2, align 4
  %4 = load i32, i32* @CFE_CMD_FW_FLUSHCACHE, align 4
  %5 = getelementptr inbounds %struct.cfe_xiocb, %struct.cfe_xiocb* %3, i32 0, i32 4
  store i32 %4, i32* %5, align 8
  %6 = getelementptr inbounds %struct.cfe_xiocb, %struct.cfe_xiocb* %3, i32 0, i32 0
  store i32 0, i32* %6, align 8
  %7 = getelementptr inbounds %struct.cfe_xiocb, %struct.cfe_xiocb* %3, i32 0, i32 3
  store i64 0, i64* %7, align 8
  %8 = load i32, i32* %2, align 4
  %9 = getelementptr inbounds %struct.cfe_xiocb, %struct.cfe_xiocb* %3, i32 0, i32 1
  store i32 %8, i32* %9, align 4
  %10 = getelementptr inbounds %struct.cfe_xiocb, %struct.cfe_xiocb* %3, i32 0, i32 2
  store i64 0, i64* %10, align 8
  %11 = call i32 @cfe_iocb_dispatch(%struct.cfe_xiocb* %3)
  %12 = getelementptr inbounds %struct.cfe_xiocb, %struct.cfe_xiocb* %3, i32 0, i32 0
  %13 = load i32, i32* %12, align 8
  ret i32 %13
}

declare dso_local i32 @cfe_iocb_dispatch(%struct.cfe_xiocb*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
